<resources>
    <string name="app_name">Tugas1</string>
    <string name="nama">Muhammad Ihsan</string>
    <string name="nim">10118037</string>
    <string name="kelas">KELAS : IF-1/S1/VI</string>
    <string name="fotoProfil">Foto Profil : </string>
    <string name="jenisKelamin">Jenis Kelamin : Laki-laki</string>
    <string name="ttl">Bandung, 23 Desember 1999</string>
    <string name="alamat">Jalan Tangkuban Perahu No.21 RT01/RW13 Lembang</string>
    <string name="golDar">Golongan Darah : O</string>
    <string name="makanan">Makanan Kesukaan : Tempe Goreng</string>
    <string name="minuman">Minuman Kesukaan : Teh Manis</string>
    <string name="hobi">Hobi : Main Game</string>
    <string name="laguFavorit">Lagu Favorit : Kygo Stay</string>
    <string name="filmFavorit">Film Favorit : Snowden</string>
    <string name="pekerjaan">Pekerjaan yang diinginkan : Network Administrator</string>
    <string name="copyright">Copyright : 2021</string>




</resources>