<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dimen16"
    android:background="@color/a6"
    tools:context=".MainActivity">

  <ImageView
      android:id="@+id/foto"
      android:layout_width="@dimen/dimen200"
      android:layout_height="@dimen/dimen200"
      android:layout_alignParentTop="true"
      android:layout_centerInParent="true"
      android:padding="@dimen/dimen16"
      android:layout_marginBottom="@dimen/dimen10"
      android:background="@color/merchantMarineBlue"
      />
  <View
      android:id="@+id/garis1"
      android:layout_width="@dimen/dimen380"
      android:layout_height="@dimen/dimen10"
      android:layout_below="@id/foto"
      android:layout_centerInParent="true"
      android:layout_marginBottom="@dimen/dimen10"
      android:background="@color/d1"
      />
  <TextView
      android:id="@+id/teks1"
      android:layout_width="@dimen/dimen150"
      android:layout_height="@dimen/dimen20"
      android:layout_centerInParent="true"
      android:layout_below="@id/garis1"
      android:text="@string/nama"
      android:textSize="@dimen/sp18"
      android:textColor="@color/white"
      android:background="@color/e1"/>
  <TextView
      android:id="@+id/teks2"
      android:layout_width="@dimen/dimen70"
      android:layout_height="@dimen/dimen20"
      android:layout_below="@id/teks1"
      android:layout_centerInParent="true"
      android:text="@string/nim"
      android:textColor="@color/white"
      android:background="@color/e2"/>
  <TextView
      android:id="@+id/teks3"
      android:layout_width="@dimen/dimen120"
      android:layout_height="@dimen/dimen20"
      android:layout_below="@id/teks2"
      android:layout_centerInParent="true"
      android:text="@string/kelas"
      android:textColor="@color/white"
      android:background="@color/e3"/>
  <TextView
      android:id="@+id/teks4"
      android:layout_width="@dimen/dimen150"
      android:layout_height="@dimen/dimen20"
      android:layout_below="@id/teks3"
      android:layout_centerInParent="true"
      android:text="@string/jenisKelamin"
      android:textColor="@color/white"
      android:background="@color/e4"/>
  <TextView
      android:id="@+id/teks5"
      android:layout_width="@dimen/dimen190"
      android:layout_height="@dimen/dimen20"
      android:layout_below="@id/teks4"
      android:layout_centerInParent="true"
      android:text="@string/ttl"
      android:textColor="@color/white"
      android:background="@color/e5"/>
  <TextView
      android:id="@+id/teks6"
      android:layout_width="@dimen/dimen120"
      android:layout_height="@dimen/dimen20"
      android:layout_below="@id/teks5"
      android:layout_centerInParent="true"
      android:text="@string/golDar"
      android:textColor="@color/white"
      android:background="@color/e6"/>
  <TextView
      android:id="@+id/teks7"
      android:layout_width="@dimen/dimen180"
      android:layout_height="@dimen/dimen20"
      android:layout_below="@id/teks6"
      android:layout_centerInParent="true"
      android:text="@string/makanan"
      android:textColor="@color/white"
      android:background="@color/e7"/>
  <TextView
      android:id="@+id/teks8"
      android:layout_width="@dimen/dimen200"
      android:layout_height="@dimen/dimen20"
      android:layout_below="@id/teks7"
      android:layout_centerInParent="true"
      android:text="@string/minuman"
      android:textColor="@color/white"
      android:background="@color/e8"/>
  <TextView
      android:id="@+id/teks9"
      android:layout_width="@dimen/dimen120"
      android:layout_height="@dimen/dimen20"
      android:layout_below="@id/teks8"
      android:layout_centerInParent="true"
      android:text="@string/hobi"
      android:textColor="@color/white"
      android:background="@color/e9"/>
  <TextView
      android:id="@+id/teks10"
      android:layout_width="@dimen/dimen120"
      android:layout_height="@dimen/dimen20"
      android:layout_below="@id/teks9"
      android:layout_centerInParent="true"
      android:text="@string/laguFavorit"
      android:textColor="@color/white"
      android:background="@color/e10"/>
  <TextView
      android:id="@+id/teks11"
      android:layout_width="@dimen/dimen150"
      android:layout_height="@dimen/dimen20"
      android:layout_below="@id/teks10"
      android:layout_centerInParent="true"
      android:text="@string/filmFavorit"
      android:textColor="@color/white"
      android:background="@color/e11"/>
  <TextView
      android:id="@+id/teks12"
      android:layout_width="@dimen/dimen320"
      android:layout_height="@dimen/dimen20"
      android:layout_below="@id/teks10"
      android:layout_centerInParent="true"
      android:text="@string/pekerjaan"
      android:textColor="@color/white"
      android:background="@color/e11"/>
  <TextView
      android:layout_width="@dimen/dimen120"
      android:layout_height="@dimen/dimen20"
      android:text="@string/copyright"
      android:textColor="@color/black"
      android:layout_alignParentBottom="true"/>



</RelativeLayout>



